# rs-embedded

./: .gitignore  Cargo.toml  memory.x  openocd.gdb
.cargo/: config.toml
embedded_book/: Cargo.toml
embedded_book/led-roulette/: Cargo.toml
embedded_book/led-roulette/auxiliary/: Cargo.toml
embedded_book/led-roulette/src/: main.rs
led-roulette/: Cargo.toml
led-roulette/auxiliary/: Cargo.toml
led-roulette/auxiliary/src/: lib.rs
led-roulette/src/: hello.rs  main.rs  registers.rs
servo-control/: Cargo.toml
servo-control/src/: main.rs
src/: main.rs
