[package]
name = "led-roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "registers"
path = "src/registers.rs"

[dependencies]
cortex-m = "0.7.4"
aux5 = { path = "auxiliary" }