[package]
name = "servo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.14"
rtt-target = {version = "0.3.1", features=["cortex-m"]}
stm32f3xx-hal = { version = "0.8.2", features = ["stm32f303x6"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
